--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,9 @@
+// - - - - - - - - - - - - - - - - - - -
+// - - libs
+@import 'scss/hercules';
+
 @import 'emoji-component/emoji-component';
+
+.svg-assets {
+  display: none;
+}
