edits `gulp-autoprefix` task to include `-webkit-`

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,9 @@
 .svg-assets {
   display: none;
 }
+
+// demo styles, get rid of
+.herc-docs-c-colored-block--blue {
+  background: lighten(#0000ff, 40);
+  margin-bottom: 10px !important;
+}
